--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-transformers
-torch
-python-dotenv
-bleak
-flask
-flask-socketio
-numpy
-sentencepiece
+flask==2.0.1
+waitress==2.1.2
+torch==2.2.1
+transformers==4.30.2
+flask-socketio==5.3.0
+psutil==5.9.0
+python-socketio==5.7.2
